--- a/BikeDaCity/app/build.gradle
+++ b/BikeDaCity/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation 'joda-time:joda-time:2.10'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.json:json:20180813'
     testImplementation 'org.mockito:mockito-core:2.+'
