--- a/BikeDaCity/app/build.gradle
+++ b/BikeDaCity/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'joda-time:joda-time:2.10'
+    implementation  'org.osmdroid:osmdroid-android:6.0.2'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.json:json:20180813'
     testImplementation 'org.mockito:mockito-core:2.+'
