--- a/BikeDaCity/app/src/main/AndroidManifest.xml
+++ b/BikeDaCity/app/src/main/AndroidManifest.xml
@@ -30,6 +30,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.unipi.iet.bikedacity.MainActivity" />
         </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/title_activity_about"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="it.unipi.iet.bikedacity.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
